Fixed scrollbar/Animated image
Fixed scrollbar (Except for Safari) so it doesn't resize page when it appears. Also changed mobile image to animated snail so it matches the desktop version.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scrollbar-gutter: stable both-edges;
+}
+
 body {
     margin: 25px;
     background-color: rgb(0, 0, 0);
